prevent overflow when dropdown is long

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1556,7 +1556,7 @@ button .dw-toggle__chevron {
 .language-switcher {
   display: inline-flex;
   position: relative;
-  min-width: 13rem;
+  min-width: 15rem;
   padding: 0; }
 
 .language-switcher__toggle {
@@ -1574,7 +1574,9 @@ button .dw-toggle__chevron {
   border: 1px solid var(--border-color);
   border-top: none;
   border-radius: 0 0 var(--border-radius) var(--border-radius);
-  margin-top: -.5rem; }
+  margin-top: -.5rem;
+  max-height: 180px;
+  overflow-y: auto; }
 
 .language-switcher__toggle[aria-expanded="true"] + .language-switcher__dropdown {
   position: absolute;
